<?xml version="1.0"?>
<package format="2">
  <name>pr-ompl</name>
  <version>0.1.0</version>
  <description>Planner developed at PRL with OMPL interface</description>
  <license>UNRELEASED</license>

  <maintainer email="adityavk@cs.uw.edu">Aditya Vamsikrishna</maintainer>

  <depend>ompl</depend>
  <depend>boost</depend>
  <depend>eigen</depend>


  <!-- This is required by REP-136. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>clang-format-3.8</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
