<?xml version="1.0"?>
<package format="2">
  <name>pr-ompl-frechet</name>
  <version>0.0.0</version>
  <description>
    NNFrechet OMPL planner developed by the Personal Robotics Lab at UW.
  </description>
  <maintainer email="sniyaz@cs.washington.edu">Sherdil Niyaz</maintainer>
  <author email="sniyaz@cs.washington.edu">Sherdil Niyaz</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ompl</depend>
</package>
