<?xml version="1.0"?>
<package format="2">
  <name>pr-ompl-frechet</name>
  <version>0.0.0</version>
  <description>
    NNFrechet OMPL planner developed by the Personal Robotics Lab at UW.
  </description>
  <maintainer email="sniyaz@cs.washington.edu">Sherdil Niyaz</maintainer>
  <author email="sniyaz@cs.washington.edu">Sherdil Niyaz</author>
  <license>BSD</license>
  <depend>ompl</depend>
  <depend>eigen</depend>

  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
