<?xml version="1.0"?>
<package format="2">
  <name>or_pr_ompl</name>
  <version>0.0.0</version>
  <description>
    OMPL planners developed by the Personal Robotics Lab at CMU.
  </description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ompl</depend>
  <depend>or_ompl</depend>
  <depend>pr_ompl</depend>
  <depend>openrave_catkin</depend>
</package>
